# gang.guide

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  IDEA.md  PLAN.md  README.md  TODO.md  build.py  flake.nix  justfile  lefthook.yml  package-lock.json  package.json  pytest.ini  skills-lock.json
.agents/skills/python-pipeline/: SKILL.md
.cursor/plans/: gang_history_data_platform_c82f39c5.plan.md
.github/workflows/: ci.yml  pr-title.yml  release.yml
.ruler/: AGENTS.md  ruler.toml
apps/pipeline/: AGENTS.md  __init__.py  adjudicate.py  apply.py  enrich.py  extract.py  lint.py  log.py  merge.py  pyproject.toml  schema.json  verify.py
apps/pipeline/lib/: resolve.py
apps/pipeline/parse/: clean.py  parse_cgh_infobox.py  parse_index.py
apps/pipeline/scrape/: cgh.py  common.py  dsg.py  ngcrc.py  nyc.py  stonegreasers.py  unitedgangs.py  wikipedia.py
apps/pipeline/tests/: conftest.py  test_pipeline_e2e.py  test_temperatures.py  test_units.py
apps/pipeline/tests/e2e/: test_pipeline.py  test_temperatures.py
apps/pipeline/tests/fixtures/: ambrose_adjudicated.json  ambrose_consensus.json  ambrose_run_1.json  ambrose_run_3.json  golden_consensus.json
apps/pipeline/tests/unit/: test_adjudicate.py  test_clean.py  test_extract.py  test_merge.py  test_regression.py  test_resolve.py  test_units.py
apps/web/: .env.example  AGENTS.md  alchemy.run.ts  commitlint.config.js  components.json  package-lock.json  package.json  svelte.config.js  vite.config.ts
apps/web/src/: app.css  app.html
apps/web/src/lib/: AGENTS.md  AppHeader.svelte  CustomCursor.svelte  orgSources.ts  searchNodes.test.ts  searchNodes.ts  (+3 more)
apps/web/static/: changelog.json  details.json  graph.json  robots.txt
data/: AGENTS.md  edges.json  lanes.json
data/logs/: .gitkeep
data/orgs/: 101-crip-gang.json  102raymond.json  105th-street-gangster-crips.json  107-hoover-criminals.json  10th--oregon-crew.json  10th-street-gang.json  110ers.json  111-neighbor-hood-crips-in-south-los-angeles.json  112-hoover-criminals.json  112-neighborhood-crips.json  112bgc.json  115-neighborhood-crips.json  116-avalon-gangster-crips.json  117-street-watts-crips.json  118-blocc-east-coast-crips.json  118-east-coast-crips.json  118-eucalyptus-mob-gangster-crips.json  118th-gangster-crips.json  1200-east-coast-blocc-crips-riverside.json  12th-street-players.json  135-pirus.json  145-neighborhood-piru.json  18th-street-gang.json  18th-street-rimpau-blvd.json  18thstreet-picounion.json  18thstreet-westlake.json  190-east-coast-blocc-crips.json  19th-street-crips-in-long-beach.json  19th-street-gang.json  1st-east-coast-crips.json  2-2-boys.json  211-crew.json  22-bandcrew.json  22street.json  24cashgang.json  28thstreet.json  29thstreet.json  31-gang.json  311-boyz.json  357-crips.json  (+1178 more)
docs/: ARCHITECTURE.md  PIPELINE.md  SCHEMA.md  STANDARDS.md  TERMINOLOGY.md  USER.md
scripts/: update-readme-stats.py
(+35 files in other folders)
