[project]
name = "gang-guide-pipeline"
version = "0.1.0"
description = "Scraping, parsing, and LLM extraction pipeline for gang.guide"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
