[project]
name = "gang-guide-pipeline"
version = "0.1.0"
description = "Scraping, parsing, and LLM extraction pipeline for gang.guide"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".venv",
    "__pycache__",
    ".ruff_cache",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "E741",  # ambiguous variable name (l, I, O) — existing code
    "F401",  # unused imports — will clean up later
    "F811",  # redefinition of unused variable
    "F841",  # unused local variable — will clean up later
    "B007",  # unused loop control variable
    "SIM102", # nested if statements — existing code style
    "RUF001", # ambiguous unicode — intentional (ℹ info symbol)
    "I001",  # unsorted imports — will fix with ruff format later
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
